Fix: z-index duplicate remove

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1653,7 +1653,6 @@ footer .footer-bottom {
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%) scale(0);
-                z-index: 9;
                 background-color: var(--bgSecondary);
                 width: 800px;
                 border-radius: 10px;
